--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -6,11 +6,9 @@ RUN apk add --no-cache --virtual .build-deps g++ python3-dev && \
     apk add --no-cache --update python3 && \
     pip3 install --upgrade pip setuptools
 
-RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %}\{%  endif %}
-
-{% if release_version %}
+RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %}\
 {% for lib in krules_libs %}
-pip3 install --no-cache-dir {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
+ && pip3 install --no-cache-dir {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
 
 {% endfor %}
 RUN apk del .build-deps
