--- a/dashboard/apps/krules-djangoapps-common/setup.py.j2
+++ b/dashboard/apps/krules-djangoapps-common/setup.py.j2
@@ -1,4 +1,8 @@
 from setuptools import setup, find_packages
+import os
+
+def read(fname):
+    return open(os.path.join(os.path.dirname(__file__), fname)).read()
 
 setup(
     name='krules-djangoapps-common',
@@ -9,6 +13,7 @@ setup(
     keywords="krules knative",
     url="https://github.com/airspot-dev/krules",
     packages=find_packages(),
+    long_description=read('README.md'),
     classifiers=[
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: Apache Software License",
