--- a/dashboard/k8s/config-dashboard-site.yaml.j2
+++ b/dashboard/k8s/config-dashboard-site.yaml.j2
@@ -7,12 +7,12 @@ spec:
   key: {{ configuration_key }}
   appliesTo:
     krules.airspot.dev/app: {{ app_name }}
+    krules.airspot.dev/type: django-dashboard
   data:
     url_settings:
       enable_admin: True
       root_redirect: admin:index
     site_settings:
-      nonce: 3
       secret_key: $DJANGO_SECRET_KEY
 #      allowed_hosts:
 #        - .svc.cluster.local
