--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -20,11 +20,13 @@ setup(
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: Apache Software License",
     ],
-    python_requires='>3.7',
+    python_requires='>3.8',
     install_requires=[
         'Jinja2==3.0.1',
-        'sane-build==7.1',
-        'python-dotenv==0.17.1',
+        'sane-build==7.2',
+        'python-dotenv==0.19.0',
+        'PyYAML==5.4.1',
+        'MarkupSafe==2.0.1',
     ],
     setup_requires=[
         'pytest-runner',
