--- a/controllers/webhook/Dockerfile.j2
+++ b/controllers/webhook/Dockerfile.j2
@@ -17,19 +17,10 @@ RUN pip3 install --no-cache-dir \
 RUN pip3 install --no-cache-dir \
 {% for lib in krules_dep_libs %}
     {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
-{% endfor %}
-{% endif %}
 
-{% if release_version %}
-{% if krules_dep_libs|length %}
-RUN pip3 install --no-cache-dir \
-{% for lib in krules_dep_libs %}
-    {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
 {% endfor %}
-{% endif %}
-RUN apk del .build-deps
 
-{% else %}
+{% else %}  {# no release_version #}
 ADD .krules-libs /krules-libs
 {% for lib in krules_dep_libs %}
 RUN cd /krules-libs/{{ lib }} && python3 setup.py develop
