--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -18,7 +18,7 @@ spec:
             serviceAccountName: krules-system
             containers:
               - name: webhook
-                image: {{ digest }}
+                image: {{ image }}
                 ports:
                   - containerPort: 8443
                     name: webhook-api
