--- a/dev_support/krules-dev-support/setup.py.j2
+++ b/dev_support/krules-dev-support/setup.py.j2
@@ -20,7 +20,7 @@ setup(
         "Development Status :: 3 - Alpha",
         "License :: OSI Approved :: Apache Software License",
     ],
-    python_requires='>3.8',
+    python_requires='>=3.8',
     install_requires=[
         'Jinja2==3.0.1',
         'sane-build==7.2',
