--- a/subjects_storages/mongodb/setup.py.j2
+++ b/subjects_storages/mongodb/setup.py.j2
@@ -24,7 +24,7 @@ setup(
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
     description="KRules mongodb subjects storage implementation",
-    licence="Apache Licence 2.0",
+    license="Apache Licence 2.0",
     keywords="krules mongodb",
     url="https://github.com/airspot-dev/krules-subjects-storage-mongodb.git",
     packages=find_packages(),
