--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -1,29 +1,26 @@
-
-
-FROM alpine:3.11.6
+FROM python:3.9-slim-bullseye
 MAINTAINER Airspot <info@airspot.tech>
 
-RUN apk add --no-cache --virtual .build-deps g++ python3-dev && \
-    apk add --no-cache build-base && \
-    apk add --no-cache --update python3 && \
-    pip3 install --upgrade pip setuptools
+ENV VIRTUAL_ENV=/opt/venv
+RUN python3 -m venv $VIRTUAL_ENV
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+
+RUN pip3 install --upgrade pip setuptools
 
 RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %}\
 {% for lib in krules_libs %}
  && pip3 install --no-cache-dir {{ lib }}=={{ release_version }} {% if not loop.last %}\{%  endif %}
 
 {% endfor %}
-RUN apk del .build-deps
-{% else %}
-
+{% else %}{# no release version (develop) #}
 {% for lib in dev_requirements %}
+
 RUN pip3 install --no-cache-dir {{ lib }} {% if not loop.last %}\{%  endif %}
 {% endfor %}
 
 ADD .krules-libs krules-libs
 {% for lib in krules_libs %}
 RUN cd krules-libs/{{ lib }} && python3 setup.py develop
-
 {% endfor %}
 {% endif %}
 
