--- a/libs/krules-k8s-functions/setup.py.j2
+++ b/libs/krules-k8s-functions/setup.py.j2
@@ -25,7 +25,7 @@ setup(
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
     description="KRules k8s subjects storage implementation",
-    licence="Apache Licence 2.0",
+    license="Apache Licence 2.0",
     keywords="krules kubernetes k8s python python knative",
     url="https://github.com/airspot-dev/krules-subjects-storage-k8s.git",
     packages=find_packages(),
