--- a/templates/ruleset/Dockerfile.j2
+++ b/templates/ruleset/Dockerfile.j2
@@ -1,3 +1,12 @@
 FROM {{ image_base }}
 
+{% for backend in subjects_backends %}
+{% if release_version %}
+RUN pip3 install krules-subjects-storage-{{ backend }}=={{ release_version }}
+{% else %}
+ADD .subjects-{{ backend }}/{{ backend }} /.subjects-{{ backend }}
+RUN cd /.subjects-{{ backend }} && python3 setup.py develop
+{% endif %}
+{% endfor %}
+
 ADD ruleset.py /app/ruleset.py
