--- a/libs/krules-dispatcher-cloudevents/setup.py.j2
+++ b/libs/krules-dispatcher-cloudevents/setup.py.j2
@@ -15,7 +15,7 @@ setup(
     author="Alberto Degli Esposti",
     author_email="alberto@arispot.tech",
     description="KRules cloudevents dispatcher",
-    licence="Apache Licence 2.0",
+    license="Apache Licence 2.0",
     keywords="krules cloudevents router",
     url="https://github.com/airspot-dev/krules-dispatcher-cloudevents",
     packages=setuptools.find_packages(),
