--- a/templates/generic/Dockerfile.j2
+++ b/templates/generic/Dockerfile.j2
@@ -1,13 +1,5 @@
 FROM {{ image_base }}
 
-ADD env.py /app/
-
-{% for backend in subjects_backends %}
-{% if release_version %}
-RUN pip3 install krules-subjects-storage-{{ backend }}=={{ release_version }}
-{% else %}
-ADD .subjects-{{ backend }}/{{ backend }} /.subjects-{{ backend }}
-RUN cd /.subjects-{{ backend }} && python3 setup.py develop
-{% endif %}
-{% endfor %}
+ADD main.py /app/
+CMD ["python3", "/app/main.py"]
 
