--- a/subjects_storages/redis/setup.py.j2
+++ b/subjects_storages/redis/setup.py.j2
@@ -34,7 +34,7 @@ setup(
         "License :: OSI Approved :: Apache Software License",
     ],
     install_requires=[
-        'redis>=3.3.5',
+        'redis==3.5.3',
 {% if release_version %}
         'krules-core=={{ release_version }}',
 {% endif %}
