--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -12,9 +12,9 @@ RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %
 RUN pip3 install --no-cache-dir {{ lib }} {% if not loop.last %}\{%  endif %}
 {% endfor %}
 
-ADD .krules-libs krules-libs
+ADD .krules-libs /.krules-libs
 {% for lib in krules_libs %}
-RUN cd krules-libs/{{ lib }} && python3 setup.py develop
+RUN cd /.krules-libs/{{ lib }} && python3 setup.py develop
 {% endfor %}
 {% endif %}
 
