--- a/templates/django/Dockerfile.j2
+++ b/templates/django/Dockerfile.j2
@@ -25,6 +25,9 @@ RUN cd /.krules-djangoapps/{{ django_app }} && python3 setup.py develop
 {% endif %}
 {% endfor %}
 
+{% for user_app in user_djangoapps %}
+ADD apps/{{ user_app }} /app/{{ user_app }}
+{% endfor %}
 
 ENV SITE_NAME=${site_name}
 ENV CONFIGURATION_KEY ${configuration_key}
