--- a/controllers/webhook/k8s/admissionconfig.yaml.j2
+++ b/controllers/webhook/k8s/admissionconfig.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: {{ name }}
+  name: {{ name }}.krules.airspot.dev
 webhooks:
   - name: {{ name }}.{{ namespace }}.svc
     sideEffects: None
@@ -43,7 +43,7 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{ name }}
+  name: {{ name }}.krules.airspot.dev
 webhooks:
   - name: {{ name }}.{{ namespace }}.svc
     sideEffects: None
