base libs support in ruleset template

--- a/templates/ruleset/Dockerfile.j2
+++ b/templates/ruleset/Dockerfile.j2
@@ -1,3 +1,8 @@
 FROM {{ image_base }}
 
+{% for user_lib in user_baselibs %}
+ADD .user-baselibs/{{ user_lib }} /app/{{ user_lib }}
+RUN cd /app/{{ user_lib }} && test -f requirements.txt && pip3 install -r requirements.txt || echo "no reqs for {{ user_lib }}"
+{% endfor %}
+
 ADD ruleset.py /app/ruleset.py
