--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -14,7 +14,7 @@ RUN pip3 install --no-cache-dir {{ lib }} {% if not loop.last %}\{%  endif %}
 
 ADD .krules-libs /.krules-libs
 {% for lib in krules_libs %}
-RUN cd /.krules-libs/{{ lib }} && python3 setup.py develop
+RUN cd /.krules-libs/{{ lib }} && pip3 install --upgrade --no-cache-dir .
 {% endfor %}
 {% endif %}
 
