--- a/templates/generic/Dockerfile.j2
+++ b/templates/generic/Dockerfile.j2
@@ -1,5 +1,10 @@
 FROM {{ image_base }}
 
+{% for user_lib in user_baselibs %}
+ADD .user-baselibs/{{ user_lib }} /app/{{ user_lib }}
+RUN cd /app/{{ user_lib }} && test -f requirements.txt && pip3 install -r requirements.txt || echo "no reqs for {{ user_lib }}"
+{% endfor %}
+
 ADD main.py /app/
 CMD ["python3", "/app/main.py"]
 
