--- a/templates/django/Dockerfile.j2
+++ b/templates/django/Dockerfile.j2
@@ -20,7 +20,7 @@ RUN apt update && apt install -y libmariadb-dev g++ && pip3 install mysqlclient 
 {% if release_version %}
 RUN pip3 install {{ django_app }}=={{ release_version }}
 {% else %}
-ADD .krules-djangoapps/{{ django_app }} /.krules-djangoapps/{{ django_app }}
+ADD {{ out_dir }}/.krules-djangoapps/{{ django_app }} /.krules-djangoapps/{{ django_app }}
 RUN cd /.krules-djangoapps/{{ django_app }} && python3 setup.py develop
 {% endif %}
 {% endfor %}
