--- a/images/ruleset-image-base/Dockerfile.j2
+++ b/images/ruleset-image-base/Dockerfile.j2
@@ -12,7 +12,7 @@ RUN pip3 install --no-cache-dir python-dateutil gunicorn {% if release_version %
 RUN pip3 install --no-cache-dir {{ lib }} {% if not loop.last %}\{%  endif %}
 {% endfor %}
 
-ADD .krules-libs /.krules-libs
+ADD .build/.krules-libs /.krules-libs
 {% for lib in krules_libs %}
 RUN cd /.krules-libs/{{ lib }} && pip3 install --upgrade --no-cache-dir .
 {% endfor %}
