flask is now 1.1.4 (fix 'itsdangerous' dep)

--- a/libs/krules-flask-env/setup.py.j2
+++ b/libs/krules-flask-env/setup.py.j2
@@ -26,7 +26,8 @@ setup(
 {% if release_version %}
         "krules-env=={{ release_version }}",
 {% endif %}
-        "flask==1.1.2",
+        "MarkupSafe==2.0.1",
+        "flask==1.1.4",
         "json-logging==1.2.11"
     ],
     setup_requires=[
