--- a/templates/dj-ruleset/Dockerfile.j2
+++ b/templates/dj-ruleset/Dockerfile.j2
@@ -13,8 +13,14 @@ RUN pip3 install --no-cache-dir psycopg2-binary
 RUN apt update && apt install -y libmariadb-dev g++ && pip3 install mysqlclient && apt remove -y libmariadb-dev g++
 {% endif %}
 
+{% for user_lib in user_baselibs %}
+ADD .build/.user-baselibs/{{ user_lib }} /app/{{ user_lib }}
+RUN cd /app/{{ user_lib }} && test -f requirements.txt && pip3 install -r requirements.txt || echo "no reqs for {{ user_lib }}"
+{% endfor %}
+
+
 {% for user_app in user_djangoapps %}
-ADD {{ out_dir }}/.user-djangoapps/{{ user_app }} /app/{{ user_app }}
+ADD .build/.user-djangoapps/{{ user_app }} /app/{{ user_app }}
 RUN cd /app/{{ user_app }} && test -f requirements.txt && pip3 install -r requirements.txt || echo "no reqs for {{ user_app }}"
 {% endfor %}
 
