supports features in cfgp

--- a/controllers/k8s/configprovidercrd.yaml.j2
+++ b/controllers/k8s/configprovidercrd.yaml.j2
@@ -77,6 +77,11 @@ spec:
 
                     x-kubernetes-preserve-unknown-fields: true
 
+                extensions:
+                  type: object
+                  x-kubernetes-preserve-unknown-fields: true
+
+
               anyOf:
                 - required:
                   - key
