--- a/controllers/k8s/configprovidercrd.yaml.j2
+++ b/controllers/k8s/configprovidercrd.yaml.j2
@@ -64,6 +64,8 @@ spec:
                         properties:
                           claimName:
                             type: string
+                        x-kubernetes-preserve-unknown-fields: true
+
                     oneOf:
                       - required:
                           - name
