krules.airspot.dev => krules.dev

--- a/controllers/k8s/configprovidercrd.yaml.j2
+++ b/controllers/k8s/configprovidercrd.yaml.j2
@@ -1,9 +1,9 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: configurationproviders.krules.airspot.dev
+  name: configurationproviders.krules.dev
 spec:
-  group: krules.airspot.dev
+  group: krules.dev
   scope: Namespaced
   names:
     plural: configurationproviders
