--- a/templates/django/rulesets/procevents/k8s/triggers.yaml.j2
+++ b/templates/django/rulesets/procevents/k8s/triggers.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   name: {{ app_name }}
   namespace: {{ namespace }}
   labels:
-    "krules.airspot.dev/app": {{ app_name }}
+    "krules.dev/app": {{ app_name }}
 spec:
   broker: procevents
   filter:
