--- a/controllers/k8s/serviceaccounts.yaml.j2
+++ b/controllers/k8s/serviceaccounts.yaml.j2
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: krules-system
+  name: {{ svc_acc_name }}
   namespace: {{ namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: krules-system
+  name: {{ svc_acc_name }}
 rules:
 - apiGroups: ["eventing.knative.dev",]
   resources:
@@ -16,9 +16,11 @@ rules:
     - list
     - get
     - create
-- apiGroups: ["krules.airspot.dev"]
+- apiGroups: ["krules.dev"]
   resources:
    - configurationproviders
+   - serviceconfigurationproviders
+   - featureconfigurationproviders
   verbs:
   - list
   - get
@@ -57,14 +59,14 @@ rules:
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: krules-system
+  name: {{ svc_acc_name }}
 subjects:
 - kind: ServiceAccount
-  name: krules-system
+  name: {{ svc_acc_name }}
   namespace: {{ namespace }}
 roleRef:
   kind: ClusterRole
-  name: krules-system
+  name: {{ svc_acc_name }}
   apiGroup: rbac.authorization.k8s.io
 ---
 
