--- a/controllers/webhook/k8s/admissionconfig.yaml.j2
+++ b/controllers/webhook/k8s/admissionconfig.yaml.j2
@@ -26,19 +26,28 @@ webhooks:
         scope: "Namespaced"
         operations:
           - CREATE
+          - UPDATE
       - apiGroups: ["apps"]
         apiVersions: ["v1"]
         resources: ["deployments"]
         scope: "Namespaced"
         operations:
           - CREATE
+          - UPDATE
       - apiGroups: [ "serving.knative.dev" ]
         apiVersions: [ "v1" ]
         resources: [ "services" ]
         scope: Namespaced
         operations:
           - CREATE
-
+          - UPDATE
+      - apiGroups: [ "krules.dev" ]
+        apiVersions: [ "*" ]
+        resources: [ "serviceconfigurationproviders", "featureconfigurationproviders" ]
+        scope: Namespaced
+        operations:
+          - CREATE
+          - UPDATE
 ---
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
@@ -71,7 +80,7 @@ webhooks:
           - UPDATE
       - apiGroups: ["krules.dev"]
         apiVersions: ["*"]
-        resources: ["configurationproviders"]
+        resources: ["configurationproviders", "serviceconfigurationproviders", "featureconfigurationproviders"]
         scope: "Namespaced"
         operations:
           - CREATE
@@ -95,4 +104,5 @@ webhooks:
         scope: "Namespaced"
         operations:
           - DELETE
+
 ---
