--- a/controllers/webhook/k8s/service.yaml.j2
+++ b/controllers/webhook/k8s/service.yaml.j2
@@ -15,7 +15,7 @@ spec:
             labels:
                 app: {{ name }}
         spec:
-            serviceAccountName: krules-system
+            serviceAccountName: {{ svc_acc_name }}
             containers:
               - name: webhook
                 image: {{ image }}
