--- a/libs/krules-k8s-functions/setup.py.j2
+++ b/libs/krules-k8s-functions/setup.py.j2
@@ -38,7 +38,8 @@ setup(
 {% if release_version %}
         'krules-core=={{ release_version }}',
 {% endif %}
-        'pykube-ng==21.3.0',
+        #'pykube-ng==21.3.0',
+        'pykube-ng==22.1.0',
     ],
     setup_requires=[
         'pytest-runner',
