build_ext on base deployment api

--- a/extensions/builder/builder-apiserversource-subscriber/k8s/apiserversource.yaml.j2
+++ b/extensions/builder/builder-apiserversource-subscriber/k8s/apiserversource.yaml.j2
@@ -9,6 +9,10 @@ spec:
   resources:
     - apiVersion: serving.knative.dev/v1
       kind: Service
+    - apiVersion: apps/v1
+      kind: Deployment
+    - apiVersion: krules.dev/v1alpha1
+      kind: ConfigurationProvider
   sink:
     ref:
       apiVersion: v1
