--- a/extensions/builder/builder-apiserversource-subscriber/k8s/serviceaccount.yaml.j2
+++ b/extensions/builder/builder-apiserversource-subscriber/k8s/serviceaccount.yaml.j2
@@ -19,6 +19,14 @@ rules:
     - get
     - watch
 - apiGroups:
+    - apps
+  resources:
+    - deployments
+  verbs:
+    - list
+    - get
+    - watch
+- apiGroups:
     - krules.dev
   resources:
     - configurationproviders
