initial service builder

--- a/controllers/k8s/configprovidercrd.yaml.j2
+++ b/controllers/k8s/configprovidercrd.yaml.j2
@@ -30,6 +30,8 @@ spec:
             spec:
               type: object
               properties:
+                description:
+                  type: string
                 key:
                   type: string
                 appliesTo:
@@ -144,6 +146,8 @@ spec:
             spec:
               type: object
               properties:
+                description:
+                  type: string
                 target:
                   type: string
                 data:
@@ -250,6 +254,8 @@ spec:
             spec:
               type: object
               properties:
+                description:
+                  type: string
                 data:
                   type: object
                   x-kubernetes-preserve-unknown-fields: true
