--- a/images/generic-image-base/Dockerfile.j2
+++ b/images/generic-image-base/Dockerfile.j2
@@ -27,7 +27,7 @@ RUN cd /.krules-libs/krules-env && pip3 install --upgrade --no-cache-dir .
 
 {% for backend in subjects_backends %}
 {% if release_version %}
-RUN pip3 install krules-subjects-storage-{{ backend }}=={{ release_version }}
+RUN pip3 install --no-cache-dir krules-subjects-storage-{{ backend }}=={{ release_version }}
 {% else %}
 ADD .build/.subjects-backends/{{ backend }} /.subjects-backends/{{ backend }}
 RUN cd /.subjects-backends/{{ backend }} && python3 setup.py develop
